cmake_minimum_required(VERSION 3.21)
if (${TOOLCHAIN_LANGUAGE} MATCHES "MikroC")
    project(rtc_demo LANGUAGES MikroC)
else()
    project(rtc_demo LANGUAGES C ASM)
endif()

include(mikroeUtils)

add_executable(rtc_demo
    main.c
)

find_package(MikroSDK.Log REQUIRED)
target_link_libraries(rtc_demo PUBLIC MikroSDK.Log)
find_package(MikroSDK.Driver.RTC REQUIRED)
target_link_libraries(rtc_demo PUBLIC MikroSDK.Driver.RTC)
find_package(MikroSDK.Driver.GPIO.Port REQUIRED)
target_link_libraries(rtc_demo PUBLIC MikroSDK.Driver.GPIO.Port)
find_package(MikroSDK.Driver.GPIO.Out REQUIRED)
target_link_libraries(rtc_demo PUBLIC MikroSDK.Driver.GPIO.Out)
find_package(MikroSDK.Driver REQUIRED)
target_link_libraries(rtc_demo PUBLIC MikroSDK.Driver)
find_package(MikroSDK.Board REQUIRED)
target_link_libraries(rtc_demo PUBLIC MikroSDK.Board)
find_package(MikroC.Core REQUIRED)
target_link_libraries(rtc_demo PUBLIC MikroC.Core)

if(COMPILER_REVISION)
    if(${COMPILER_REVISION} VERSION_GREATER_EQUAL "1.0")
        if(${TOOLCHAIN_LANGUAGE} STREQUAL "GNU")
            if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.meproject)
                fetch_startup_name(${CMAKE_CURRENT_SOURCE_DIR}/.meproject startupName)
                if(startupName)
                    add_startup_all_targets(. ${CMAKE_CURRENT_SOURCE_DIR} ${startupName})
                endif()
                fetch_linker_name(${CMAKE_CURRENT_SOURCE_DIR}/.meproject linkerName)
                if(linkerName)
                    add_ld_all_targets(. ${CMAKE_CURRENT_SOURCE_DIR} ${linkerName})
                endif()
            endif()
        endif()
    endif()
endif()
